--- a/cart/Dockerfile
+++ b/cart/Dockerfile
@@ -1,4 +1,13 @@
-FROM node:hydrogen-alpine3.20
+FROM FROM node:23.2.0-alpine3.20
+EXPOSE 8080
+RUN addgroup -S cart && adduser -S cart cart
+WORKDIR /opt/server
+RUN chown -R cart:cart /opt/server
+USER cart
+COPY package.json .
+COPY server.js .
+RUN npm install
+CMD ["node", "server.js"]
 EXPOSE 8080
 RUN addgroup -S cart && adduser -S cart cart
 WORKDIR /opt/server
